# antikythera

./: .gitignore  README.md  environment.yml  pyproject.toml  run.ipynb
antikythera/: __init__.py  explore.py  mle.py  models.py  sampler.py
notebooks/: run.ipynb
results/: mle_aniso.npy  mle_iso.npy  model_comparison.pkl
src/: __init__.py  compare.py  mle.py  models.py  sampler.py  visualise.py
