[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antikythera"
version = "0.1.0"
description = "Analysis of the Antikythera Mechanism calendar ring using Bayesian inference"

readme = "README.md"

authors = [{ name = "Keying Song", email = "ks2146@cam.ac.uk" }]

requires-python = ">=3.8"

license = {text = "MIT"}

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "pymc>=5.0.0",  # For Bayesian inference with HMC
    "arviz>=0.12.0",  # For MCMC diagnostics and visualisation
    "jupyter>=1.0.0",
    "jupyter-black>=0.3.1",
]

[tool.setuptools]
packages = ["src"]